Add stylecop and pagination

--- a/recipeWebsite/recipeWebsite/Views/Home/Index.cshtml
+++ b/recipeWebsite/recipeWebsite/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model PagingList<Paginglist.Models.Recipe>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +8,21 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@{
+
+    var prevDisabled = !Model.PreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.NextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+    asp-route-pageNumber="@(Model.PageIndex - 1)"
+    class ="btn btn-default @prevDisabled">
+    Previous
+</a>
+
+<a asp-action="Index"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
